--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,9 @@ jobs:
           name: Build front-end
           command: |
             cd frontend
+            npm install
             npm run build
+            ls dist
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -28,6 +30,7 @@ jobs:
           name: Back-end build
           command: |
              cd backend
+             npm install
              npm run build
       - save_cache:
           paths: [backend/node_modules]
