--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,6 @@ orbs:
   slack: circleci/slack@4.9.3
 
 jobs:
-  notify:
-    docker:
-      - image: 'cimg/base:stable'
-    steps:
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
-      - slack/notify:
-          event: pass
-          template: success_tagged_deploy_1
-
   build-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -40,6 +29,9 @@ jobs:
             - frontend/node_modules
             - frontend/package-lock.json
           key: frontend-build-{{ .Branch }}-{{ checksum "frontend/package-lock.json" }}
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
 
   build-backend:
     docker:
@@ -117,9 +109,8 @@ jobs:
 workflows:
   udapeople:
     jobs:
-      - notify:
+      - build-frontend:
           context: slack-secret
-      - build-frontend
       - build-backend
       - test-frontend:
           requires: [build-frontend]
