--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,8 @@ workflows:
     jobs:
       - build-frontend:
           context: slack-secret
-      - build-backend
+      - build-backend:
+          context: slack-secret
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
