--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,8 @@ jobs:
           command: |
             cd backend
             npm audit fix --audit-level=critical --force
+            npm install --save-dev webpack@5.74.0
+            npm update mkdirp --depth 2
             npm audit --audit-level=critical
 
 
