add deploy and configure infrastructure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,6 +203,12 @@ jobs:
       - run:
           name: Configure server
           command: |
+            pwd
+            ls
+            echo "check .circleci/ansible/inventory.txt"
+            cat .circleci/ansible/inventory.txt
+            echo "check project"
+            cat project/.circleci/ansible/inventory.txt
             ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
       #ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure   
