--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,6 +258,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            npm install
             npm run migrations > migration_output.log
             cat migration_output.log
             grep "has been executed successfully" migration_output.log
