--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -2,10 +2,7 @@
 
 - name: "configuration play." 
   hosts: web
-  user: ubuntu
-  become: true
-  become_method: sudo
-  become_user: root  
+  become: true 
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
@@ -32,3 +29,8 @@
 
   roles:
     - configure-server
+
+  post_tasks:
+    - name: "check environment variables"
+      debug:
+        msg: "{{ lookup('env','TYPEORM_CONNECTION','TYPEORM_HOST','TYPEORM_PORT','TYPEORM_USERNAME','TYPEORM_PASSWORD','TYPEORM_DATABASE','TYPEORM_MIGRATIONS_DIR','TYPEORM_ENTITIES','TYPEORM_MIGRATIONS') }}"
