--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,6 +265,8 @@ jobs:
       - run:
           name: Install aws cli
           command: |
+            apt-get update
+            apt-get install less
             cd /tmp
             pwd
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
