--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,8 +296,8 @@ jobs:
       - run:
           name: Install aws cli
           command: |
-            apt-get update
-            apt-get install less
+            sudo apt-get update
+            sudo apt-get install less
             cd /tmp
             pwd
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
