--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,12 +367,12 @@ jobs:
       - run:
           name: Test Backend
           command: |
-            API_URL=$(aws ssm get-parameter --name udapeople_API_URL_${CIRCLE_WORKFLOW_ID} --query 'Parameter.Value' --output text))
+            API_URL=$(aws ssm get-parameter --name udapeople_API_URL_${CIRCLE_WORKFLOW_ID} --query 'Parameter.Value' --output text)
             curl ${API_URL}
       - run:
           name: Test Frontend
           command: |
-            FRONTEND_URL=$(aws ssm get-parameter --name udapeople_FRONTEND_URL_${CIRCLE_WORKFLOW_ID} --query 'Parameter.Value' --output text))
+            FRONTEND_URL=$(aws ssm get-parameter --name udapeople_FRONTEND_URL_${CIRCLE_WORKFLOW_ID} --query 'Parameter.Value' --output text)
             curl ${FRONTEND_URL}
       # - destroy-environment
 
