--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -391,9 +391,9 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --tags project=UdaPeople-project-cloudfront \
-              --stack-name --stack-name udapeople-cloudfront \
+              --stack-name udapeople-cloudfront \
               --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID}
-      # - aws cloudfromation rollback 
+      # - aws cloudfromation rollback
 
 workflows:
   udapeople:
