--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: "upgrade packages"
   become: true
   apt:
-    upgrade: yes
+    upgrade: no
 
 - name : "set up node as web server"
   become: true
